# ss_integrated

./: Description  README.md  Readme  SharingShard Description.md  package-lock.json  package.json
Contract/: Cargo.toml  README.md  redeploy.sh  redeploy.sh~
Contract/neardev/: dev-account  dev-account.env
Contract/src/: lib.rs
doc/: data-model.md  tokenization.md
frontend/: READ.ME
jazo/: package-lock.json
jazo/src/: globalConstant.js  main.js  router.js
jazo/src/views/: AboutView.vue  HomeView.vue  original ExperiencesView copy.vue
src/: App.vue  main.js  router1.js
src/components/: NavBar.vue  Navbar2.vue
src/views/: AboutView.vue  ExperiencesView.vue  MomentView.vue  PoView.vue  merge AboutView copy.vue
src/views1/: Pov.vue  Pov1
