[package]
name = "near_sharingshard"
version = "0.1.0"
authors = ["NEAR Inc <hello@near.org>"]
edition = "2021"
#path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "SharingShard"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.5"

[profile.release]
codegen-units = 1

# Tell `rustc` to optimize for small code size.

opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true